<resources>
    <string name="app_name">Taller4_PDM_CA</string>
    <string name="action_settings">Settings</string>
    <string name="book_default">BOOK</string>
    <string name="btn_favorite">Favorite</string>
    <string name="titulo">Titulo:</string>
    <string name="nadaxd">N/A</string>
    <string name="autor">Autor:</string>
    <string name="edicion">Edicion:</string>
    <string name="editorial">Editorial:</string>
    <string name="resumen">Resumen:</string>
    <string name="isbn">ISBN:</string>

    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
